--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
 		<script type="text/javascript" src="js/lib/jquery-3.6.0.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/owl.carousel.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/jquery.scrollbar.min.js" defer></script>
+		<script type="text/javascript" src="https://platform.twitter.com/widgets.js" defer charset="utf-8"></script>
 		<script type="text/javascript" src="js/main.js" defer></script>
 	</head>
 	<body>
@@ -73,7 +74,7 @@
 				
 						<form action="" class="search">
 							<div class="form-content">
-								<span class="search-types-toggle"></span>
+								<span class="search-types-toggle all"></span>
 								<ul class="search-types">
 									<li class="all"><label for="search-type-all"><input type="radio" name="search-type" value="all" id="search-type-all">All</label></li>
 									<li class="insights"><label for="search-type-insights"><input type="radio" name="search-type" value="insights" id="search-type-insights">Insights</label></li>
@@ -330,8 +331,8 @@
 						<a href="" class="view-all link-underline">View All</a>
 					</div>
 
-					<div class="scrollable-content scrollbar-inner">
-						<a class="twitter-timeline" href="https://twitter.com/Oaktree?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+					<div class="twitter-feed scrollable-content scrollbar-inner">
+						<a class="twitter-timeline" href="https://twitter.com/Oaktree?ref_src=twsrc%5Etfw"></a>
 					</div>
 				</div>
 			</div>
