--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<title>Oaktree Capital</title>
-		<link rel="stylesheet" href="css/style.css"/>
+		<link rel="stylesheet" href="css/style.css?v1"/>
 		<link rel="stylesheet" href="css/lib/owl.carousel.min.css">
 		<link rel="stylesheet" href="css/lib/owl.theme.default.min.css">
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 		<script type="text/javascript" src="js/lib/owl.carousel.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/jquery.scrollbar.min.js" defer></script>
 		<script type="text/javascript" src="https://platform.twitter.com/widgets.js" defer charset="utf-8"></script>
-		<script type="text/javascript" src="js/main.js" defer></script>
+		<script type="text/javascript" src="js/main.js?v=1" defer></script>
 	</head>
 	<body>
 		<div class="header">
