--- a/home.html
+++ b/home.html
@@ -19,6 +19,9 @@
 		<script type="text/javascript" src="js/lib/jquery.scrollbar.min.js" defer></script>
 		<script type="text/javascript" src="https://platform.twitter.com/widgets.js" defer charset="utf-8"></script>
 		<script type="text/javascript" src="js/main.js?v=1" defer></script>
+
+		<link rel="shortcut icon" href="images/oaktree-fav-icon.png">
+		<link rel="apple-touch-icon" href="images/apple-touch-icon-oc.png">
 	</head>
 	<body>
 		<div class="header">
