--- a/home.html
+++ b/home.html
@@ -26,7 +26,10 @@
 	<body>
 		<div class="header">
 			<div class="header-content">
-				<span class="burger"></span>
+				<div id="menu-toggle">
+					<div id="hamburger"><span></span><span></span><span></span></div>
+					<div id="cross"><span></span><span></span></div>
+				</div>
 				<a href="https://www.oaktreecapital.com/" class="logo"><img src="images/logo.svg" alt=""></a>
 				<div class="navigations">
 					<div class="mega-nav">
