--- a/home.html
+++ b/home.html
@@ -185,7 +185,7 @@
 					<div data-dot="About Oaktree">
 						<div class="img-wrapper">
 							<img src="content/content-1.jpg" alt="">
-							<video autoplay="autoplay" loop="loop" muted="muted" playsinline="playsinline" src="videos/1030796531-hd.mov" type="video/quicktime"></video>
+							<video autoplay="false" controls=""false loop="loop" muted="muted" playsinline="playsinline" src="videos/1030796531-hd.mov" type="video/quicktime"></video>
 						</div>
 						<h1>
 							<span class="animate-rows row-1">Oaktree's mission is to deliver</span>
