--- a/home.html
+++ b/home.html
@@ -151,25 +151,27 @@
 							<li>
 								<a href="/investors.html"><span>Investors</span></a>
 				
-								<ul class="sub-menu">
-									<li>
-										<h5>Investor Type</h5>
-										<ul class="sub-sub-menu">
-											<li><a href="/investors/institutional-investors.html">Institutional Investors</a></li>
-											<li><a href="/investors/financial-professionals.html">Financial Professionals</a></li>
-											<li><a href="/investors/individual-investors.html">Individual Investors</a></li>
-											<li><a href="/investors/public-unitholders.html">Public Unitholders</a></li>
-										</ul>
-									</li>
-									<li>
-										<h5>Investor Login</h5>
-										<ul class="sub-sub-menu">
-											<li><a href="/investors/lp-client-portal.html">LP Client Portal</a></li>
-											<li><a href="/investors/public-unitholders.html">Public Unitholder</a></li>
-											<li><a href="/investors/tax-package.html">Tax Package</a></li>
-										</ul>
-									</li>
-								</ul>
+								<div class="sub-menu-wrapper">
+									<ul class="sub-menu">
+										<li>
+											<h5>Investor Type</h5>
+											<ul class="sub-sub-menu">
+												<li><a href="/investors/institutional-investors.html">Institutional Investors</a></li>
+												<li><a href="/investors/financial-professionals.html">Financial Professionals</a></li>
+												<li><a href="/investors/individual-investors.html">Individual Investors</a></li>
+												<li><a href="/investors/public-unitholders.html">Public Unitholders</a></li>
+											</ul>
+										</li>
+										<li>
+											<h5>Investor Login</h5>
+											<ul class="sub-sub-menu">
+												<li><a href="/investors/lp-client-portal.html">LP Client Portal</a></li>
+												<li><a href="/investors/public-unitholders.html">Public Unitholder</a></li>
+												<li><a href="/investors/tax-package.html">Tax Package</a></li>
+											</ul>
+										</li>
+									</ul>
+								</div>
 							</li>
 							<li><a href="/careers.html"><span>Careers</span></a></li>
 							<li><a href="/contact-us.html"><span>Contact Us</span></a></li>
