About Checkout charts

--- a/about.html
+++ b/about.html
@@ -223,7 +223,7 @@
 		<div class="chart-wrapper">
 			<div class="chart-content">
 				<h2>Assets Under Management (AUM)<sup>1</sup></h2>
-				<canvas id="aum-chart" data-chart='{"label": "$ in Billions", "labels": ["1995","2000","2005","2010","2015","MAR 2021"], "data": [5,18,30,84,114,156]}'></canvas>
+				<canvas id="aum-chart" data-chart='{"label": "$ in Billions", "labels": ["1995","2000","2005","2010","2015",["MAR","2021"]], "data": [5,18,30,84,114,156]}'></canvas>
 			</div>
 		</div>
 
