--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
 					<h2>Oaktree Capital Management is a <i>leader among global investment managers</i> specializing in alternative investments.</h2>
 				</div>
 				<div class="columns column-2">
-					<p>Our competitive advantages include our <a href="#">experienced team</a> of investment professionals, a <a href="#">global platform</a> and a unifying <a href="#">investment philosophy</a> that is complemented by a set of core <a href="#">business principles</a>.</p>
+					<p>Our competitive advantages include our <a href="#" class="link-underline inline">experienced team</a> of investment professionals, a <a href="#" class="link-underline inline">global platform</a> and a unifying <a href="#" class="link-underline inline">investment philosophy</a> that is complemented by a set of core <a href="#" class="link-underline inline">business principles</a>.</p>
 
 					<p>Our expertise in investing across the capital structure has allowed us to cultivate a diversified mix of global investment strategies in four categories: credit, private equity, real assets and listed equities. We emphasize an opportunistic, value-oriented and risk-controlled approach to investing in these asset classes.</p>
 				</div>
@@ -369,7 +369,7 @@
 			<img src="content/fullwidth-brookfield.jpg" alt="">
 			<div class="content">
 				<h2>Brookfield</h2>
-				<p>In 2019, <a href="http://www.brookfield.com">Brookfield Asset Management</a> acquired a majority interest in Oaktree.  Together, Brookfield and Oaktree provide investors with one of the most comprehensive offerings of alternative investment products available today. While partnering to leverage one another’s strengths, Oaktree operates as an independent business within the Brookfield family, with its own product offerings and investment, marketing, and support teams.  To learn more about Brookfield, please visit <a href="http://www.brookfield.com">www.brookfield.com</a>.</p>
+				<p>In 2019, <a href="http://www.brookfield.com" class="link-underline inline white">Brookfield Asset Management</a> acquired a majority interest in Oaktree.  Together, Brookfield and Oaktree provide investors with one of the most comprehensive offerings of alternative investment products available today. While partnering to leverage one another’s strengths, Oaktree operates as an independent business within the Brookfield family, with its own product offerings and investment, marketing, and support teams.  To learn more about Brookfield, please visit <a href="http://www.brookfield.com" class="link-underline inline white">www.brookfield.com</a>.</p>
 				<p>* Office of affiliates of Oaktree-managed funds</p>
 			</div>
 		</div>
