--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="js/lib/jquery.scrollbar.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/chart.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/chartjs-plugin-datalabels.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/odometer.min.js" defer></script>
 		<script type="text/javascript" src="https://platform.twitter.com/widgets.js" defer charset="utf-8"></script>
 		<script type="text/javascript" src="js/main.js?v=1" defer></script>
 
@@ -191,9 +192,9 @@
 
 		<div class="featured-stats-wrapper">
 			<ul class="featured-stats">
-				<li><span class="value">1995</span><span class="description">Firm founded</span></li>
-				<li><span class="value">$153B</span><span class="description">Assests under management</span></li>
-				<li><span class="value">1,000+</span><span class="description">Employees</span></li>
+				<li><span class="value year"><span class="odometer " data-odometer="1995">0000</span></span><span class="description">Firm founded</span></li>
+				<li><span class="value"><span>$</span><span class="odometer" data-odometer="153">000</span><span>B</span></span><span class="description">Assests under management</span></li>
+				<li><span class="value"><span class="odometer" data-odometer="1000">0,000</span><span>+</span></span><span class="description">Employees</span></li>
 			</ul>
 		</div>
 
