About Page: clients section

--- a/about.html
+++ b/about.html
@@ -20,6 +20,10 @@
 		<script type="text/javascript" src="js/lib/chart.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/chartjs-plugin-datalabels.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/odometer.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/TweenMax.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/ScrollMagic.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/animation.gsap.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/debug.addIndicators.min.js" defer></script>
 		<script type="text/javascript" src="https://platform.twitter.com/widgets.js" defer charset="utf-8"></script>
 		<script type="text/javascript" src="js/main.js?v=1" defer></script>
 
@@ -256,10 +260,12 @@
 
 		<div class="sliding-info">
 			<div class="sliding-info-content">
+				<div class="trigger-1"></div>
+				<div class="trigger-2"></div>
 				<h2>Clients</h2>
 
-				<ul class="slides">
-					<li>
+				<div class="slides">
+					<div class="item">
 						<div class="img-wrap">
 							<img src="content/slide-1.jpg" alt="">
 						</div>
@@ -267,8 +273,44 @@
 							<div class="value">67 of 100</div>
 							<div class="description">largest U.S. pension plans</div>
 						</div>
-					</li>
-				</ul>
+					</div>
+					<div class="item">
+						<div class="img-wrap">
+							<img src="content/slide-2.jpg" alt="">
+						</div>
+						<div class="value-wrapper">
+							<div class="value">+475</div>
+							<div class="description">corporations around the world</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="img-wrap">
+							<img src="content/slide-3.jpg" alt="">
+						</div>
+						<div class="value-wrapper">
+							<div class="value">40 of the 50</div>
+							<div class="description">state retirement plans in the U.S.</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="img-wrap">
+							<img src="content/slide-4.jpg" alt="">
+						</div>
+						<div class="value-wrapper">
+							<div class="value">300+</div>
+							<div class="description">endowments and foundations globally</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="img-wrap">
+							<img src="content/slide-5.jpg" alt="">
+						</div>
+						<div class="value-wrapper">
+							<div class="value">15</div>
+							<div class="description">sovereign wealth funds</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
