About Page: fix missing owlcarousel library

--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
 		<script type="text/javascript" src="js/lib/ScrollMagic.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/animation.gsap.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/debug.addIndicators.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/owl.carousel.min.js" defer></script>
 		<script type="text/javascript" src="js/main.js?v=1" defer></script>
 
 		<link rel="shortcut icon" href="images/oaktree-fav-icon.png">
