Insight Pages: all desktop & mobile + subscribe lightbox

--- a/about-leadership-filter.html
+++ b/about-leadership-filter.html
@@ -189,58 +189,58 @@
 			<h1>Leadership</h1>
 		</div>
 
-		<div class="bio-list">
-			<div class="bio-list-content">
+		<div class="people-list">
+			<div class="people-list-content">
 				<h2>Senior Executives and Directors</h2>
-				<div class="bios-wrapper owl-carousel">
-					<div class="bio">
-						<a href=""><img src="content/bio-1.jpg" alt=""/></a>
+				<div class="people-wrapper owl-carousel">
+					<div class="person">
+						<a href=""><img src="content/person-1.jpg" alt=""/></a>
 						<h4><a href="">Howard Marks</a></h4>
 						<h5>CFA, Co-Chairman</h5>
 					</div>
-					<div class="bio">
-						<a href=""><img src="content/bio-2.jpg" alt=""/></a>
+					<div class="person">
+						<a href=""><img src="content/person-2.jpg" alt=""/></a>
 						<h4><a href="">Bruce Karsh</a></h4>
 						<h5>Co-Chairman and Chief Investment Officer</h5>
 					</div>
-					<div class="bio">
-						<a href=""><img src="content/bio-3.jpg" alt=""/></a>
+					<div class="person">
+						<a href=""><img src="content/person-3.jpg" alt=""/></a>
 						<h4><a href="">Jay Wintrob</a></h4>
 						<h5>Chief Executive Officer</h5>
 					</div>
-					<div class="bio">
-						<a href=""><img src="content/bio-4.jpg" alt=""/></a>
+					<div class="person">
+						<a href=""><img src="content/person-4.jpg" alt=""/></a>
 						<h4><a href="">John Frank</a></h4>
 						<h5>Vice Chairman</h5>
 					</div>
-					<div class="bio">
-						<a href=""><img src="content/bio-5.jpg" alt=""/></a>
+					<div class="person">
+						<a href=""><img src="content/person-5.jpg" alt=""/></a>
 						<h4><a href="">Sheldon Stone</a></h4>
 						<h5>Principal and Co-Portfolio Manager</h5>
 					</div>
 
-					<div class="bio">
-						<a href=""><img src="content/bio-1.jpg" alt=""/></a>
+					<div class="person">
+						<a href=""><img src="content/person-1.jpg" alt=""/></a>
 						<h4><a href="">Howard Marks</a></h4>
 						<h5>CFA, Co-Chairman</h5>
 					</div>
-					<div class="bio">
-						<a href=""><img src="content/bio-2.jpg" alt=""/></a>
+					<div class="person">
+						<a href=""><img src="content/person-2.jpg" alt=""/></a>
 						<h4><a href="">Bruce Karsh</a></h4>
 						<h5>Co-Chairman and Chief Investment Officer</h5>
 					</div>
-					<div class="bio">
-						<a href=""><img src="content/bio-3.jpg" alt=""/></a>
+					<div class="person">
+						<a href=""><img src="content/person-3.jpg" alt=""/></a>
 						<h4><a href="">Jay Wintrob</a></h4>
 						<h5>Chief Executive Officer</h5>
 					</div>
-					<div class="bio">
-						<a href=""><img src="content/bio-4.jpg" alt=""/></a>
+					<div class="person">
+						<a href=""><img src="content/person-4.jpg" alt=""/></a>
 						<h4><a href="">John Frank</a></h4>
 						<h5>Vice Chairman</h5>
 					</div>
-					<div class="bio">
-						<a href=""><img src="content/bio-5.jpg" alt=""/></a>
+					<div class="person">
+						<a href=""><img src="content/person-5.jpg" alt=""/></a>
 						<h4><a href="">Sheldon Stone</a></h4>
 						<h5>Principal and Co-Portfolio Manager</h5>
 					</div>
