--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="https://use.typekit.net/hrc2dds.css">
 
 		<script type="text/javascript" src="js/lib/jquery-3.6.0.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/jquery-ui.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/chart.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/chartjs-plugin-datalabels.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/odometer.min.js" defer></script>
