--- a/about-leadership-filter.html
+++ b/about-leadership-filter.html
@@ -184,7 +184,7 @@
 			</div>
 		</div>
 
-		<div class="page-hero">
+		<div class="page-hero bottom">
 			<img src="content/about-leadership-hero.jpg" alt="">
 			<h1>Leadership</h1>
 		</div>
