--- a/about-leadership-filter.html
+++ b/about-leadership-filter.html
@@ -267,6 +267,7 @@
 					<div class="search-filter-wrapper">
 						<span>Filter by:</span>
 						<input type="text" name="" id="search-filter" placeholder="Name" />
+						<button class="search"></button>
 					</div>
 				</div>
 				
