Memo Example - fix social buttons

--- a/memo-example.html
+++ b/memo-example.html
@@ -205,7 +205,7 @@
 					<li><a href="https://www.twitter.com/oaktree" class="twitter"></a></li>
 					<li><a href="https://www.linkedin.com/company/oaktree-capital-management" class="linkedin"></a></li>
 					<li><a href="https://www.facebook.com/oaktreecapital" class="facebook"></a></li>
-					<li><a href="https://www.youtube.com/oaktreecapital" class="youtube"></a></li>
+					<li><a href="mailto:support@oaktreecapital.com" class="mail"></a></li>
 				</ul>
 			</div>
 
