ESG frameworks fixes

--- a/esg.html
+++ b/esg.html
@@ -215,7 +215,7 @@
 			<div class="membership-content">
 				<h2>ESG Frameworks and Memberships</h2>
 
-				<div class="membership-list owl-carousel">
+				<div class="membership-list">
 					<div class="item active">
 						<div class="img-wrap"><img src="content/member-pri.png" alt="" width="211" height="61"></div>
 						<div class="description">In order to deepen our longstanding commitment to ESG integration in investment, Oaktree became a signatory to the United-Nations-supported <a href="https://www.unpri.org/">Principles for Responsible Investment</a> (PRI) in 2019. Oaktree’s ESG Policy and our strategy-specific ESG Integration Plans are informed by the principles set forth in the PRI.</div>
