--- a/article-example.html
+++ b/article-example.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="css/style.css?v1"/>
 		<link rel="stylesheet" href="css/lib/owl.carousel.min.css">
 		<link rel="stylesheet" href="css/lib/owl.theme.default.min.css">
-		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.typekit.net/hrc2dds.css">
 		<link rel="stylesheet" href="css/lib/jquery-ui.min.css">
 		<link rel="stylesheet" href="css/lib/datatables.min.css">
