Social icons on every Page Hero

--- a/about-principles.html
+++ b/about-principles.html
@@ -187,6 +187,16 @@
 		<div class="page-hero">
 			<img src="content/about-hero.jpg" alt="">
 			<h1>Business Principles</h1>
+
+			<div class="social-links-wrapper">
+				<span>Follow Us</span>
+				<ul class="social-links">
+					<li><a href="https://www.twitter.com/oaktree" class="twitter"></a></li>
+					<li><a href="https://www.linkedin.com/company/oaktree-capital-management" class="linkedin"></a></li>
+					<li><a href="https://www.facebook.com/oaktreecapital" class="facebook"></a></li>
+					<li><a href="https://www.youtube.com/oaktreecapital" class="youtube"></a></li>
+				</ul>
+			</div>
 		</div>
 
 		<div class="quote-wrapper">
