--- a/insights.html
+++ b/insights.html
@@ -188,6 +188,16 @@
 			<img src="content/insights-hero.jpg" alt="">
 			<h1>Insights</h1>
 			<div class="btn-wrap"><a href="" class="btn primary subscribe">Subscribe</a></div>
+
+			<div class="social-links-wrapper">
+				<span>Follow Us</span>
+				<ul class="social-links">
+					<li><a href="https://www.twitter.com/oaktree" class="twitter"></a></li>
+					<li><a href="https://www.linkedin.com/company/oaktree-capital-management" class="linkedin"></a></li>
+					<li><a href="https://www.facebook.com/oaktreecapital" class="facebook"></a></li>
+					<li><a href="https://www.youtube.com/oaktreecapital" class="youtube"></a></li>
+				</ul>
+			</div>
 		</div>
 
 		<div class="subscribe-lightbox">
