horizontal and vertical tab fixes, subscribe lightbox position top

--- a/about-di.html
+++ b/about-di.html
@@ -211,42 +211,44 @@
 		</div>
 
 		<div class="tabbed-content-wrapper">
-			<div class="tabbed-sections-wrapper">
-				<ul class="tabbed-sections">
-					<li data-target="#item-1" class="active">Recruitment</li>
-					<li data-target="#item-2">Retention & Development</li>
-					<li data-target="#item-3">Awareness & Education</li>
-					<li data-target="#item-4">Accountability</li>
-				</ul>
-			</div>
+			<div class="tabbed-content-inner">
+				<div class="tabbed-sections-wrapper">
+					<ul class="tabbed-sections">
+						<li data-target="#item-1" class="active">Recruitment</li>
+						<li data-target="#item-2">Retention & Development</li>
+						<li data-target="#item-3">Awareness & Education</li>
+						<li data-target="#item-4">Accountability</li>
+					</ul>
+				</div>
 
-			<div class="tabbed-content-list-wrapper">
-				<ul class="tabbed-content-list">
-					<li id="item-1" class="active">
-						<h5>Recruitment</h5>
-						<div class="content">
-							<p>Innovative and proactive outreach and recruitment efforts focused on female and diverse talent.</p>
-						</div>
-					</li>
-					<li id="item-2">
-						<h5>Retention & Development</h5>
-						<div class="content">
-							<p>Programs and employment benefits aimed at retaining and developing Oaktree’s female and diverse populations.</p>
-						</div>
-					</li>
-					<li id="item-3">
-						<h5>Awareness & Education</h5>
-						<div class="content">
-							<p>Training and other programs around inclusive leadership and to increase awareness of biases that may preclude us from reaping the full benefits of a diverse workforce.</p>
-						</div>
-					</li>
-					<li id="item-4">
-						<h5>Accountability</h5>
-						<div class="content">
-							<p>Clear communication of D&I expectations by executive leadership to department heads and hiring managers, and the allocation of resources to drive increased transparency, accountability and results in support of our D&I goals.</p>
-						</div>
-					</li>
-				</ul>
+				<div class="tabbed-content-list-wrapper">
+					<ul class="tabbed-content-list">
+						<li id="item-1" class="active">
+							<h5>Recruitment</h5>
+							<div class="content">
+								<p>Innovative and proactive outreach and recruitment efforts focused on female and diverse talent.</p>
+							</div>
+						</li>
+						<li id="item-2">
+							<h5>Retention & Development</h5>
+							<div class="content">
+								<p>Programs and employment benefits aimed at retaining and developing Oaktree’s female and diverse populations.</p>
+							</div>
+						</li>
+						<li id="item-3">
+							<h5>Awareness & Education</h5>
+							<div class="content">
+								<p>Training and other programs around inclusive leadership and to increase awareness of biases that may preclude us from reaping the full benefits of a diverse workforce.</p>
+							</div>
+						</li>
+						<li id="item-4">
+							<h5>Accountability</h5>
+							<div class="content">
+								<p>Clear communication of D&I expectations by executive leadership to department heads and hiring managers, and the allocation of resources to drive increased transparency, accountability and results in support of our D&I goals.</p>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 
