--- a/about-investment.html
+++ b/about-investment.html
@@ -209,56 +209,58 @@
 		</div>
 
 		<div class="tabbed-content-wrapper">
-			<div class="tabbed-sections-wrapper">
-				<ul class="tabbed-sections">
-					<li data-target="#item-1" class="active">The Primacy Of Risk Control</li>
-					<li data-target="#item-2">Emphasis On Consistency</li>
-					<li data-target="#item-3">The Benfits Of Specialization</li>
-					<li data-target="#item-4">The Importance Of Market Inefficiency</li>
-					<li data-target="#item-5">Macro-forecasting Not Critical To Investing</li>
-					<li data-target="#item-6">Disavowal Of Market Timing</li>
-				</ul>
-			</div>
-
-			<div class="tabbed-content-list-wrapper">
-				<ul class="tabbed-content-list">
-					<li id="item-1" class="active">
-						<h5>The primacy of risk control</h5>
-						<div class="content">
-							<p>Our goal is not superior investment performance but superior performance with less-than-commensurate risk. Above-average gains in good times are not necessarily proof of a manager's skill; it takes superior performance in bad times to prove that those good-time gains were earned through skill, not simply the acceptance of above average risk. Thus, rather than merely searching for prospective profits, we place the highest priority on preventing losses. It is our overriding belief that, especially in the opportunistic markets in which we work, "If we avoid the losers, the winners will take care of themselves."</p>
-						</div>
-					</li>
-					<li id="item-2">
-						<h5>Emphasis On Consistency</h5>
-						<div class="content">
-							<p>Our goal is not superior investment performance but superior performance with less-than-commensurate risk. Above-average gains in good times are not necessarily proof of a manager's skill; it takes superior performance in bad times to prove that those good-time gains were earned through skill, not simply the acceptance of above average risk. Thus, rather than merely searching for prospective profits, we place the highest priority on preventing losses. It is our overriding belief that, especially in the opportunistic markets in which we work, "If we avoid the losers, the winners will take care of themselves."</p>
-						</div>
-					</li>
-					<li id="item-3">
-						<h5>The Benfits Of Specialization</h5>
-						<div class="content">
-							<p>Our goal is not superior investment performance but superior performance with less-than-commensurate risk. Above-average gains in good times are not necessarily proof of a manager's skill; it takes superior performance in bad times to prove that those good-time gains were earned through skill, not simply the acceptance of above average risk. Thus, rather than merely searching for prospective profits, we place the highest priority on preventing losses. It is our overriding belief that, especially in the opportunistic markets in which we work, "If we avoid the losers, the winners will take care of themselves."</p>
-						</div>
-					</li>
-					<li id="item-4">
-						<h5>The Importance Of Market Inefficiency</h5>
-						<div class="content">
-							<p>Our goal is not superior investment performance but superior performance with less-than-commensurate risk. Above-average gains in good times are not necessarily proof of a manager's skill; it takes superior performance in bad times to prove that those good-time gains were earned through skill, not simply the acceptance of above average risk. Thus, rather than merely searching for prospective profits, we place the highest priority on preventing losses. It is our overriding belief that, especially in the opportunistic markets in which we work, "If we avoid the losers, the winners will take care of themselves."</p>
-						</div>
-					</li>
-					<li id="item-5">
-						<h5>Macro-forecasting Not Critical To Investing</h5>
-						<div class="content">
-							<p>Our goal is not superior investment performance but superior performance with less-than-commensurate risk. Above-average gains in good times are not necessarily proof of a manager's skill; it takes superior performance in bad times to prove that those good-time gains were earned through skill, not simply the acceptance of above average risk. Thus, rather than merely searching for prospective profits, we place the highest priority on preventing losses. It is our overriding belief that, especially in the opportunistic markets in which we work, "If we avoid the losers, the winners will take care of themselves."</p>
-						</div>
-					</li>
-					<li id="item-6">
-						<h5>Disavowal Of Market Timing</h5>
-						<div class="content">
-							<p>Our goal is not superior investment performance but superior performance with less-than-commensurate risk. Above-average gains in good times are not necessarily proof of a manager's skill; it takes superior performance in bad times to prove that those good-time gains were earned through skill, not simply the acceptance of above average risk. Thus, rather than merely searching for prospective profits, we place the highest priority on preventing losses. It is our overriding belief that, especially in the opportunistic markets in which we work, "If we avoid the losers, the winners will take care of themselves."</p>
-						</div>
-					</li>
-				</ul>
+			<div class="tabbed-content-inner">
+				<div class="tabbed-sections-wrapper">
+					<ul class="tabbed-sections">
+						<li data-target="#item-1" class="active">The Primacy Of Risk Control</li>
+						<li data-target="#item-2">Emphasis On Consistency</li>
+						<li data-target="#item-3">The Benfits Of Specialization</li>
+						<li data-target="#item-4">The Importance Of Market Inefficiency</li>
+						<li data-target="#item-5">Macro-forecasting Not Critical To Investing</li>
+						<li data-target="#item-6">Disavowal Of Market Timing</li>
+					</ul>
+				</div>
+				
+				<div class="tabbed-content-list-wrapper">
+					<ul class="tabbed-content-list">
+						<li id="item-1" class="active">
+							<h5>The primacy of risk control</h5>
+							<div class="content">
+								<p>Our goal is not superior investment performance but superior performance with less-than-commensurate risk. Above-average gains in good times are not necessarily proof of a manager's skill; it takes superior performance in bad times to prove that those good-time gains were earned through skill, not simply the acceptance of above average risk. Thus, rather than merely searching for prospective profits, we place the highest priority on preventing losses. It is our overriding belief that, especially in the opportunistic markets in which we work, "If we avoid the losers, the winners will take care of themselves."</p>
+							</div>
+						</li>
+						<li id="item-2">
+							<h5>Emphasis On Consistency</h5>
+							<div class="content">
+								<p>Our goal is not superior investment performance but superior performance with less-than-commensurate risk. Above-average gains in good times are not necessarily proof of a manager's skill; it takes superior performance in bad times to prove that those good-time gains were earned through skill, not simply the acceptance of above average risk. Thus, rather than merely searching for prospective profits, we place the highest priority on preventing losses. It is our overriding belief that, especially in the opportunistic markets in which we work, "If we avoid the losers, the winners will take care of themselves."</p>
+							</div>
+						</li>
+						<li id="item-3">
+							<h5>The Benfits Of Specialization</h5>
+							<div class="content">
+								<p>Our goal is not superior investment performance but superior performance with less-than-commensurate risk. Above-average gains in good times are not necessarily proof of a manager's skill; it takes superior performance in bad times to prove that those good-time gains were earned through skill, not simply the acceptance of above average risk. Thus, rather than merely searching for prospective profits, we place the highest priority on preventing losses. It is our overriding belief that, especially in the opportunistic markets in which we work, "If we avoid the losers, the winners will take care of themselves."</p>
+							</div>
+						</li>
+						<li id="item-4">
+							<h5>The Importance Of Market Inefficiency</h5>
+							<div class="content">
+								<p>Our goal is not superior investment performance but superior performance with less-than-commensurate risk. Above-average gains in good times are not necessarily proof of a manager's skill; it takes superior performance in bad times to prove that those good-time gains were earned through skill, not simply the acceptance of above average risk. Thus, rather than merely searching for prospective profits, we place the highest priority on preventing losses. It is our overriding belief that, especially in the opportunistic markets in which we work, "If we avoid the losers, the winners will take care of themselves."</p>
+							</div>
+						</li>
+						<li id="item-5">
+							<h5>Macro-forecasting Not Critical To Investing</h5>
+							<div class="content">
+								<p>Our goal is not superior investment performance but superior performance with less-than-commensurate risk. Above-average gains in good times are not necessarily proof of a manager's skill; it takes superior performance in bad times to prove that those good-time gains were earned through skill, not simply the acceptance of above average risk. Thus, rather than merely searching for prospective profits, we place the highest priority on preventing losses. It is our overriding belief that, especially in the opportunistic markets in which we work, "If we avoid the losers, the winners will take care of themselves."</p>
+							</div>
+						</li>
+						<li id="item-6">
+							<h5>Disavowal Of Market Timing</h5>
+							<div class="content">
+								<p>Our goal is not superior investment performance but superior performance with less-than-commensurate risk. Above-average gains in good times are not necessarily proof of a manager's skill; it takes superior performance in bad times to prove that those good-time gains were earned through skill, not simply the acceptance of above average risk. Thus, rather than merely searching for prospective profits, we place the highest priority on preventing losses. It is our overriding belief that, especially in the opportunistic markets in which we work, "If we avoid the losers, the winners will take care of themselves."</p>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 
