--- a/about-principles.html
+++ b/about-principles.html
@@ -209,70 +209,72 @@
 		</div>
 
 		<div class="tabbed-content-wrapper">
-			<div class="tabbed-sections-wrapper">
-				<ul class="tabbed-sections">
-					<li data-target="#item-1" class="active">Excellence In Investing</li>
-					<li data-target="#item-2">Commonality Of Interests</li>
-					<li data-target="#item-3">Propriety, In-depth Research</li>
-					<li data-target="#item-4">Personnel Practices</li>
-					<li data-target="#item-5">Management Fee Arrangements</li>
-					<li data-target="#item-6">Communication With Clients</li>
-					<li data-target="#item-7">Profitability</li>
-					<li data-target="#item-8">New Products</li>
-				</ul>
-			</div>
-
-			<div class="tabbed-content-list-wrapper">
-				<ul class="tabbed-content-list">
-					<li id="item-1" class="active">
-						<h5>Excellence In Investing</h5>
-						<div class="content">
-							<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
-						</div>
-					</li>
-					<li id="item-2">
-						<h5>Commonality Of Interests</h5>
-						<div class="content">
-							<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
-						</div>
-					</li>
-					<li id="item-3">
-						<h5>Propriety, In-depth Research</h5>
-						<div class="content">
-							<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
-						</div>
-					</li>
-					<li id="item-4">
-						<h5>Personnel Practices</h5>
-						<div class="content">
-							<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
-						</div>
-					</li>
-					<li id="item-5">
-						<h5>Management Fee Arrangements</h5>
-						<div class="content">
-							<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
-						</div>
-					</li>
-					<li id="item-6">
-						<h5>Communication With Clients</h5>
-						<div class="content">
-							<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
-						</div>
-					</li>
-					<li id="item-7">
-						<h5>Profitability</h5>
-						<div class="content">
-							<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
-						</div>
-					</li>
-					<li id="item-8">
-						<h5>New Products</h5>
-						<div class="content">
-							<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
-						</div>
-					</li>
-				</ul>
+			<div class="tabbed-content-inner">
+				<div class="tabbed-sections-wrapper">
+					<ul class="tabbed-sections">
+						<li data-target="#item-1" class="active">Excellence In Investing</li>
+						<li data-target="#item-2">Commonality Of Interests</li>
+						<li data-target="#item-3">Propriety, In-depth Research</li>
+						<li data-target="#item-4">Personnel Practices</li>
+						<li data-target="#item-5">Management Fee Arrangements</li>
+						<li data-target="#item-6">Communication With Clients</li>
+						<li data-target="#item-7">Profitability</li>
+						<li data-target="#item-8">New Products</li>
+					</ul>
+				</div>
+				
+				<div class="tabbed-content-list-wrapper">
+					<ul class="tabbed-content-list">
+						<li id="item-1" class="active">
+							<h5>Excellence In Investing</h5>
+							<div class="content">
+								<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
+							</div>
+						</li>
+						<li id="item-2">
+							<h5>Commonality Of Interests</h5>
+							<div class="content">
+								<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
+							</div>
+						</li>
+						<li id="item-3">
+							<h5>Propriety, In-depth Research</h5>
+							<div class="content">
+								<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
+							</div>
+						</li>
+						<li id="item-4">
+							<h5>Personnel Practices</h5>
+							<div class="content">
+								<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
+							</div>
+						</li>
+						<li id="item-5">
+							<h5>Management Fee Arrangements</h5>
+							<div class="content">
+								<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
+							</div>
+						</li>
+						<li id="item-6">
+							<h5>Communication With Clients</h5>
+							<div class="content">
+								<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
+							</div>
+						</li>
+						<li id="item-7">
+							<h5>Profitability</h5>
+							<div class="content">
+								<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
+							</div>
+						</li>
+						<li id="item-8">
+							<h5>New Products</h5>
+							<div class="content">
+								<p>Our goal is excellence in investing. To us, this means achieving attractive returns without commensurate risk, an imbalance which can only be achieved in markets that are not "efficient." Although we strive for superior returns, our first priority is that our actions produce consistency, protection of capital, and superior performance in bad times.</p>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 
