--- a/insights.html
+++ b/insights.html
@@ -21,6 +21,7 @@
 		<script type="text/javascript" src="js/lib/jquery.scrollbar.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/owl.carousel.min.js" defer></script>
 		<script type="text/javascript" src="js/lib/datatables.min.js" defer></script>
+		<script type="text/javascript" src="js/lib/ScrollMagic.min.js" defer></script>
 		<script type="text/javascript" src="js/main.js?v=1" defer></script>
 
 		<link rel="shortcut icon" href="images/oaktree-fav-icon.png">
